package upc.ruben.model;

public enum EstadoViaje {
    PENDIENTE,
    RESERVADO,
    EN_CURSO,
    FINALIZADO,
}
