package upc.ruben.model;

public enum TipoProveedor {
    HOTEL,
    RESTAURANTE,
    GUIA_TURISTICO,
    TOUR_AVENTURA
}
